@@ -1,0 +1,12 @@
+module Kernel
+  # Suppresses any warnings raised in a specified block.
+  def without_warnings
+    old_verbose = $VERBOSE
+    begin
+      $VERBOSE = nil
+      yield
+    ensure
+      $-v = old_verbose
+    end
+  end
+end
