@@ -3,6 +3,8 @@
 * Support loading timezone data in the latest trunk versions of Ruby 1.9.
   Rational.new! is now private, so call it using Rational.send :new! instead.
   Thanks to Jeremy Kemper and Pratik Naik for spotting this. Closes #19184.
+* Prevent warnings from being output when running Ruby with the -v or -w
+  command line options. Thanks to Paul McMahon for the patch. Closes #19719.
 
 
 == Version 0.3.8 (tzdata v2008b) - 24-Mar-2008
